# resemb

./: CMakeLists.txt  LICENSE  README.md
cmake/: resembConfig.cmake.in  resembFunctions.cmake
include/resemb/: resemb.h
src/: resemb_gen.c
